fix visual alignment

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -195,6 +195,7 @@ input[type="button"].error_delete:hover {
     margin-left: -5px;
     margin-right: -5px;
     box-shadow: 0 1px 3px #0002;
+    margin-bottom: 2px;
 }
 
 #progress span:hover {
